--- a/src/app/components/admin/admin-calendar/admin-calendar-list/admin-calendar-list.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-list/admin-calendar-list.component.html
@@ -51,7 +51,6 @@
                         <th scope="col" style="vertical-align: top;">Title</th>
                         <th scope="col" style="vertical-align: top;">Display Name</th>
                         <th scope="col" style="vertical-align: top;">Dates</th>
-                        <th scope="col" style="vertical-align: top;">Bodies</th>
                         <th scope="col" style="vertical-align: top;">Edit</th>
                     </tr>
                     </thead>
@@ -73,26 +72,17 @@
                             <a routerLink="/admin/calendar/{{event.$key}}/edit"
                                class="text-dark dates">
                                 <span *ngIf="event.date1">
-                                    <i class="fa fa-calendar-check"></i> {{ event.date1.toDate() | date }}
+                                    <i class="fa fa-calendar-check"></i> {{ event.date1 }}
                                 </span> <br>
                                 <span *ngIf="event.date2">
-                                    <i class="fa fa-calendar-check"></i> {{ event.date2.toDate() | date }}
+                                    <i class="fa fa-calendar-check"></i> {{ event.date2 }}
                                 </span> <br>
                                 <span *ngIf="event.date3">
-                                    <i class="fa fa-calendar-check"></i> {{ event.date3.toDate() | date }}
+                                    <i class="fa fa-calendar-check"></i> {{ event.date3 }}
                                 </span><br>
                                 <span *ngIf="event.date4">
-                                    <i class="fa fa-calendar-check"></i> {{ event.date4.toDate() | date }}
+                                    <i class="fa fa-calendar-check"></i> {{ event.date4 }}
                                 </span><br>
-                            </a>
-                        </td>
-                        <td scope="col">
-                            <a routerLink="/admin/calendar/{{event.$key}}/edit"
-                               class="text-dark dates text-truncate">
-                                <i class="fa fa-align-justify"></i> {{ event.body1 | slice:0:70 }}... <br>
-                                <i class="fa fa-align-justify"></i> {{ event.body2 | slice:0:70 }}... <br>
-                                <i class="fa fa-align-justify"></i> {{ event.body3 | slice:0:70 }}... <br>
-                                <i class="fa fa-align-justify"></i> {{ event.body4 | slice:0:70 }}... <br>
                             </a>
                         </td>
                         <td scope="col">
